--- a/frontend_panel/package.json
+++ b/frontend_panel/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.14.0",
+    "@graphql-tools/mock": "^9.0.25",
+    "@graphql-tools/schema": "^10.0.25",
     "@types/react-slick": "^0.23.13",
     "antd": "^5.26.2",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
+    "graphql": "^16.11.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -22,7 +26,8 @@
     "react-router-dom": "^7.6.3",
     "react-spinners": "^0.17.0",
     "recharts": "^3.0.2",
-    "sonner": "^2.0.5"
+    "sonner": "^2.0.5",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
